--- a/index.pug
+++ b/index.pug
@@ -28,7 +28,7 @@ html(lang="zh-hant-tw")
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a.navbar-brand
+          a.navbar-brand.jf-jinxuan-book
             .logo_content
               p 張伯宇
               p.sub UI/UX Desginer
