--- a/sass/style.sass
+++ b/sass/style.sass
@@ -4,13 +4,14 @@ $color_gray: #8b8b8b
 $color_text_a: #333
 $color_text: #606060
 $color_subtext: #9C9C9C
+@import url(http://fonts.googleapis.com/earlyaccess/notosanstc.css)
 
 html
   font-size: 62.5%
 body
   position: relative
 *
-  font-family: jf-jinxuan,微軟正黑體
+  font-family: 'Noto Sans TC', sans-serif
   color: $color_text
     
 h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6
@@ -18,45 +19,6 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6
 nav.navbar
   transition: 0.5s
   padding: 58px  42px 0
-  li
-    padding: 0px 20px
-    &:last-child
-      padding-right: 0
-  a
-    padding: 0
-    color: $color_text
-    &::before
-      content: ""
-      position: absolute
-      left: 0
-      top: 50%
-      width: 0
-      height: 2px
-      background-color: $color_text_a
-      transition: width 0.25s ease-in-out
-  .navbar-nav>.active>a
-    color: $color_text
-    background-color: transparent
-    &:hover,&focus
-      color: $color_text_a
-      background-color: transparent
-  .navbar-nav>.active>a,.navbar-nav a:hover
-    color: $color_text_a
-    background-color: transparent
-    &::before
-      width: 100%
-  &.navbar-top
-    background-color: transparent
-    border: 0
-    box-shadow: none
-    .active>a
-      color: $color_text_a
-    a
-      transition: 0.5s
-    .navbar-toggle
-      border-color: #fff
-      .icon-bar
-        background-color: #fff
   .navbar-brand
     padding: 0
     margin-left: 0 !important
@@ -64,32 +26,18 @@ nav.navbar
       p
         display: inline-block
         margin: 0
+        letter-spacing: .1rem
       .sub
         display: inline-block
         padding-left: 20px
         font-size: 1.4rem
         color: $color_subtext
-  .navbar-toggle
-    border-color: $color_text_a
-    border-radius: 0
-    .icon-bar
-      background-color: $color_text_a
+        letter-spacing: .15rem
 section
   text-align: center
   p
     font-size: 1.4rem
 section#works
-    .btn-work
-      display: inline-block
-      padding: 12px 15px
-      color: #fff
-      border: 2px solid
-      transition: 0.5s
-      cursor: pointer
-    li.active .btn-work,.btn-work:hover 
-      background-color: #fff
-      border-color: #fff
-      color: $color_gray
   .work-item
     padding: 15px
     background-color: transparent
@@ -114,15 +62,15 @@ section#works
         display: table
         width: 100%
         height: 100%
-      .content
+      a.content
         display: table-cell
         vertical-align: middle
+        color: $color_text
+        text-decoration: none
         h2
           font-size: 2.4rem
         p
           line-height: 1.5
-        a
-          text-decoration: none
       .btn-work-item
         display: inline-block
         padding: 6px 15px
@@ -142,52 +90,63 @@ section#works
     text-align: left
     .modal
       padding-top: 50px
+    .modal-backdrop
+      height: 0 !important
+    .modal-dialog
+      margin: 0
+      width: 100%
     .modal-content
       border: 0
       border-radius: 0
     .modal-header
       position: relative
       padding: 18px 40px 20px
-      background-color: #303030
-      color: #fff
+      background-color: #fff
+      color: $color_text
+      border-bottom: 0
       .close
         position: absolute
-        top: 6px
-        right: -24px
-        color: #fff
-        font-size: 2rem
+        top: 24px
+        right: 40px
+        color: $color_text
+        font-size: 4rem
         opacity: 1
       .modal-title
-        font-size: 2.2rem
+        font-size: 4rem
+        display: inline-block
+        letter-spacing: .2rem
       .modal-title+p
-        margin-top: 3px
+        margin-left: 32px
+        display: inline-block
+        font-size: 1.8rem
+        color: $color_subtext
+        letter-spacing: .1rem
     .modal-body
       color: $color_text_a
       font-size: 1.8rem
       text-align: center
       padding: 40px
-      background-color: #f3f3f3
+      background-color: #fff
       img
         max-width: 100%
-    .modal-footer
-      background-color: #303030
-      color: #fff
-      border: none
-      text-align: center
-      font-size: 1.4rem
-      padding: 0 40px
-      line-height: 1.5
-      a
-        text-align: center
-        color: #bd8924
-        text-decoration: none
-        &:hover
-          color: #a87920
-      p
-        text-align: left
-        margin: 20px 0
+      .info
+        margin: 40px auto
+        display: flex
+        align-items: center
+        justify-content: center
+        .modal-subtitle
+          font-size: 3.2rem
+          letter-spacing: .15rem
+        .modal-text>p
+          font-size: 1.6rem
+          text-align: left
+          margin: 20px auto
+          line-height: 2.4rem
+          font-weight: 100
+      .row
+        margin-top: 40px
 footer
-  background-color: $color_gray
+  background-color: $color_subtext
   color: #fff
   text-align: center
   padding: 30px 0px
