--- a/index.pug
+++ b/index.pug
@@ -2,7 +2,7 @@
 html(lang="zh-hant-tw")
   head
     meta(charset="UTF-8")
-    meta(name="viewport" content="width=device-width, initial-scale=1, user-scalable=no")
+    meta(name="viewport" content="width=device-width, initial-scale=1")
     title 張伯宇 個人作品集網頁
     link(rel="stylesheet", href="css/normalize.css")
     link(rel="stylesheet", href="css/bootstrap.min.css")
@@ -46,9 +46,16 @@ html(lang="zh-hant-tw")
             img(src="images/work-web4.png", alt="")
             .work-item-info
               .cell
-                a.content(href="#item2" data-toggle="modal")
-                  h2 艾蜜莉定存股
-                  p 針對股市中的定存股族群，所設計的一款App
+                a.content(href="#item3" data-toggle="modal")
+                  h2 作品集網站
+                  p 第一版作品集網站
+          //- .col-xs-12.col-sm-6.work-item
+          //-   img(src="images/work-web4.png", alt="")
+          //-   .work-item-info
+          //-     .cell
+          //-       a.content(href="#item4" data-toggle="modal")
+          //-         h2 聊天機器人
+          //-         p 模擬Chatbot的使用情境
       .modal.fade.work-detail#item1(role="dialog")
         .modal-dialog
           .modal-content
@@ -60,19 +67,19 @@ html(lang="zh-hant-tw")
               .container
                 img(src="images/work-ui1.png", alt="")
                 .row.info
-                  .col-sm-4.modal-subtitle DESCRIPTION
-                  .col-sm-8.modal-text
+                  .col-xs-12.col-sm-4.modal-subtitle DESCRIPTION
+                  .col-xs-12.col-sm-8.modal-text
                     p 發想來自在工作的時候，時常無法將工作天數評估良好，造成同一時間的工作量暴增，甚至是接回來才發現其他部門的工作量早已不堪負荷。
                     p 已現有的行事曆軟體都是以自己算時間，然後寫上事項，但其實很花時間；如果這時候，新增事項是可以用工作天數為估算，並把每一個事項的工作天數填完後再新增，這樣子所有案子的時程就一目瞭然，而且再新增事項上所花的時間也會少很多。
                 .row
-                  img.col-sm-6(src="images/ui-1.png", alt="")
-                  img.col-sm-6(src="images/ui-04.png", alt="")
+                  img.col-xs-12.col-sm-6(src="images/ui-1.png", alt="")
+                  img.col-xs-12.col-sm-6(src="images/ui-04.png", alt="")
                 .row
-                  img.col-sm-4(src="images/ui-02.gif", alt="")
-                  img.col-sm-4(src="images/ui-04.gif", alt="")
-                  img.col-sm-4(src="images/ui-08.gif", alt="")
+                  img.col-xs-12.col-sm-4(src="images/ui-02.gif", alt="")
+                  img.col-xs-12.col-sm-4(src="images/ui-04.gif", alt="")
+                  img.col-xs-12.col-sm-4(src="images/ui-08.gif", alt="")
       .modal.fade.work-detail#item2(role="dialog")
-        .modal-dialog.modal-lg
+        .modal-dialog
           .modal-content
             .modal-header
               span.close(data-dismiss="modal") &times;
@@ -88,30 +95,61 @@ html(lang="zh-hant-tw")
 
                     p 目前上架一年，累積下載量已超過40萬，每週活躍用戶達3萬人。
                 .row
-                  img.col-sm-12(src="images/ui-flow.png", alt="")
+                  img.col-sm-12(src="images/UI_showcase.png", alt="")
+                .row.info
+                  .col-sm-4.modal-subtitle POSITION
+                  .col-sm-8.modal-text
+                    p 當初在使用者族群上，除了鎖定既有正在使用桌機版軟體的人之外，希望吸引小資族群。所以在顏色上使用與小資女形象相符的粉紅色，並且以白色作為底色。營造出有別於股市黑底的形象。
                 .row
-                  img.col-sm-4(src="images/ui-02.gif", alt="")
-                  img.col-sm-4(src="images/ui-04.gif", alt="")
-                  img.col-sm-4(src="images/ui-08.gif", alt="")
-      .modal.fade.work-detail#item2(role="dialog")
-      .modal.fade.work-detail#item5(role="dialog")
-        .modal-dialog.modal-lg
+                  img.col-sm-12(src="images/UI-flow.png", alt="")
+                .row.info
+                  .col-sm-4.modal-subtitle PROCESS
+                  .col-sm-8.modal-text
+                    p 除了擔任視覺設計之外，因為要與工程師溝通，所以也需要準備各式的文件，包含UI Flow。
+      .modal.fade.work-detail#item3(role="dialog")
+        .modal-dialog
           .modal-content
             .modal-header
               span.close(data-dismiss="modal") &times;
               h4.modal-title 作品集網站
-              p #Web #Singlepage #galley #Bootstrap #RWD
+              p ＃介面設計＃Pototype
+              a(href="https://e032386.github.io/CV/") 前往看看
             .modal-body
-              p «wireframe»
-                a(href="images/wireframe.png" target="_blank")
-                  img(src="images/wireframe.png", alt="")
-              p «mockup»
-                a(href="images/mockup.png" target="_blank")
-                  img(src="images/mockup.png", alt="")
-            .modal-footer
-              a(href="#" target="_blank") 連結
-              p 試著畫wireframe開始,規劃網頁元素的區塊以及在不同尺寸上的呈現樣式。再將實際的圖與文字套上,變成mockup。並以Bootstrap為基礎,再套上filter,Masonry,Parallax Scrolling等效果。
-              p 使用語言:HTML、CSS(Bootstrap)、JavaScript(jQuery外掛-filter,Masonry,Scrollr)
+              .container
+                img(src="images/work-web4.png", alt="")
+                .row.info
+                  .col-sm-4.modal-subtitle DESCRIPTION
+                  .col-sm-8.modal-text
+                    p 以自己作品集的網站為例,從設計到切版的過程紀錄,以Bootstrap為基礎做設計,此網頁為RWD響應式網站
+                .row
+                  img.col-sm-12(src="images/wireframe.png", alt="")
+                  img.col-sm-12(src="images/mockup.png", alt="")
+                .row.info
+                  .col-sm-4.modal-subtitle PROCESS
+                  .col-sm-8.modal-text
+                    p 試著畫wireframe開始,規劃網頁元素的區塊以及在不同尺寸上的呈現樣式。再將實際的圖與文字套上,變成mockup。並以Bootstrap為基礎,再套上filter,Masonry,Parallax Scrolling等效果。
+      //- .modal.fade.work-detail#item3(role="dialog")
+      //-   .modal-dialog
+      //-     .modal-content
+      //-       .modal-header
+      //-         span.close(data-dismiss="modal") &times;
+      //-         h4.modal-title 聊天機器人
+      //-         p #Web #Singlepage #galley #Bootstrap #RWD
+      //-         a(href="https://e032386.github.io/CV/") 前往看看
+      //-       .modal-body
+      //-         .container
+      //-           img(src="images/work-web4.png", alt="")
+      //-           .row.info
+      //-             .col-sm-4.modal-subtitle DESCRIPTION
+      //-             .col-sm-8.modal-text
+      //-               p 
+      //-           .row
+      //-             img.col-sm-12(src="images/wireframe.png", alt="")
+      //-             img.col-sm-12(src="images/mockup.png", alt="")
+      //-           .row.info
+      //-             .col-sm-4.modal-subtitle PROCESS
+      //-             .col-sm-8.modal-text
+      //-               p 試著畫wireframe開始,規劃網頁元素的區塊以及在不同尺寸上的呈現樣式。再將實際的圖與文字套上,變成mockup。並以Bootstrap為基礎,再套上filter,Masonry,Parallax Scrolling等效果。
   footer
     .container
       p Copyright © 2018 soso. All Rights Reserved.
