--- a/index.pug
+++ b/index.pug
@@ -17,7 +17,7 @@ html(lang="zh-hant-tw")
       ga('create', 'UA-90594538-2', 'auto');
       ga('send', 'pageview');
 
-  body(data-spy="scroll" data-target=".navbar" data-offset="100")
+  body
     nav.navbar.navbar-top
       .container
         .navbar-header
@@ -29,21 +29,21 @@ html(lang="zh-hant-tw")
       .container
         .row.work-items
           .col-xs-12.col-sm-6.work-item
-            img(src="images/work-ui1.png", alt="")
+            img(src="images/work_ui1.png", alt="")
             .work-item-info
               .cell
                 a.content(href="#item1" data-toggle="modal")
                   h2 Puzzle Time
                   p 一個簡潔、便利的時間管理app,可以用於一般行事或是專案管理使用
           .col-xs-12.col-sm-6.work-item
-            img(src="images/work-ui2.png", alt="")
+            img(src="images/work_ui2.png", alt="")
             .work-item-info
               .cell
                 a.content(href="#item2" data-toggle="modal")
                   h2 艾蜜莉定存股
                   p 針對股市中的定存股族群，所設計的一款App
           .col-xs-12.col-sm-6.work-item
-            img(src="images/work-web4.png", alt="")
+            img(src="images/work_ui3.png", alt="")
             .work-item-info
               .cell
                 a.content(href="#item3" data-toggle="modal")
@@ -65,19 +65,19 @@ html(lang="zh-hant-tw")
               p ＃企劃發想＃流程規劃＃介面設計＃Pototype
             .modal-body
               .container
-                img(src="images/work-ui1.png", alt="")
+                img(src="images/work_ui1.png", alt="")
                 .row.info
                   .col-xs-12.col-sm-4.modal-subtitle DESCRIPTION
                   .col-xs-12.col-sm-8.modal-text
                     p 發想來自在工作的時候，時常無法將工作天數評估良好，造成同一時間的工作量暴增，甚至是接回來才發現其他部門的工作量早已不堪負荷。
                     p 已現有的行事曆軟體都是以自己算時間，然後寫上事項，但其實很花時間；如果這時候，新增事項是可以用工作天數為估算，並把每一個事項的工作天數填完後再新增，這樣子所有案子的時程就一目瞭然，而且再新增事項上所花的時間也會少很多。
                 .row
-                  img.col-xs-12.col-sm-6(src="images/ui-1.png", alt="")
-                  img.col-xs-12.col-sm-6(src="images/ui-04.png", alt="")
+                  img.col-xs-12.col-sm-6(src="images/ui1_01.png", alt="")
+                  img.col-xs-12.col-sm-6(src="images/ui1_02.png", alt="")
                 .row
-                  img.col-xs-12.col-sm-4(src="images/ui-02.gif", alt="")
-                  img.col-xs-12.col-sm-4(src="images/ui-04.gif", alt="")
-                  img.col-xs-12.col-sm-4(src="images/ui-08.gif", alt="")
+                  img.col-xs-12.col-sm-4(src="images/ui1_03.gif", alt="")
+                  img.col-xs-12.col-sm-4(src="images/ui1_04.gif", alt="")
+                  img.col-xs-12.col-sm-4(src="images/ui1_05.gif", alt="")
       .modal.fade.work-detail#item2(role="dialog")
         .modal-dialog
           .modal-content
@@ -87,7 +87,7 @@ html(lang="zh-hant-tw")
               p ＃介面設計＃Pototype＃使用者研究＃Ios/Android雙平台
             .modal-body
               .container
-                img(src="images/work-ui2.png", alt="")
+                img(src="images/work_ui2.png", alt="")
                 .row.info
                   .col-sm-4.modal-subtitle DESCRIPTION
                   .col-sm-8.modal-text
@@ -95,13 +95,13 @@ html(lang="zh-hant-tw")
 
                     p 目前上架一年，累積下載量已超過40萬，每週活躍用戶達3萬人。
                 .row
-                  img.col-sm-12(src="images/UI_showcase.png", alt="")
+                  img.col-sm-12(src="images/ui2_01.png", alt="")
                 .row.info
                   .col-sm-4.modal-subtitle POSITION
                   .col-sm-8.modal-text
                     p 當初在使用者族群上，除了鎖定既有正在使用桌機版軟體的人之外，希望吸引小資族群。所以在顏色上使用與小資女形象相符的粉紅色，並且以白色作為底色。營造出有別於股市黑底的形象。
                 .row
-                  img.col-sm-12(src="images/UI-flow.png", alt="")
+                  img.col-sm-12(src="images/ui2_02.png", alt="")
                 .row.info
                   .col-sm-4.modal-subtitle PROCESS
                   .col-sm-8.modal-text
@@ -116,14 +116,14 @@ html(lang="zh-hant-tw")
               a(href="https://e032386.github.io/CV/") 前往看看
             .modal-body
               .container
-                img(src="images/work-web4.png", alt="")
+                img(src="images/work_ui3.png.png", alt="")
                 .row.info
                   .col-sm-4.modal-subtitle DESCRIPTION
                   .col-sm-8.modal-text
                     p 以自己作品集的網站為例,從設計到切版的過程紀錄,以Bootstrap為基礎做設計,此網頁為RWD響應式網站
                 .row
-                  img.col-sm-12(src="images/wireframe.png", alt="")
-                  img.col-sm-12(src="images/mockup.png", alt="")
+                  img.col-sm-12(src="images/ui3_01.png", alt="")
+                  img.col-sm-12(src="images/ui3_02.png", alt="")
                 .row.info
                   .col-sm-4.modal-subtitle PROCESS
                   .col-sm-8.modal-text
